cmake_minimum_required(VERSION 3.10)
project(tests)

enable_testing()
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
set(SUBARRAY_TEST_FILES subarray_tests.cpp)
add_executable(runSubArrayTests ${SUBARRAY_TEST_FILES})
target_link_libraries(runSubArrayTests gtest gtest_main)
target_link_libraries(runSubArrayTests subarray)
